[gd_scene load_steps=31 format=3 uid="uid://criphhq0yv58a"]

[ext_resource type="Texture2D" uid="uid://bt6tajcxg7ekq" path="res://Assets/Basic Charakter Spritesheet.png" id="1_30ev0"]
[ext_resource type="Script" path="res://player.gd" id="1_gbfve"]
[ext_resource type="Texture2D" uid="uid://7yjblgrt6641" path="res://Assets/Walking anim3.png" id="3_7xrjg"]
[ext_resource type="Texture2D" uid="uid://dtu4fgu775i41" path="res://Assets/Walking anim1.png" id="3_j6lri"]
[ext_resource type="Texture2D" uid="uid://be04w2wfae8ks" path="res://Assets/Walking anim4.png" id="4_in08t"]
[ext_resource type="Texture2D" uid="uid://c0l7583aiwbrw" path="res://Assets/Walking anim2.png" id="4_jcenl"]
[ext_resource type="Texture2D" uid="uid://dku6r1nrehkiw" path="res://Assets/boxchat.png" id="7_atc84"]
[ext_resource type="FontFile" uid="uid://h0bletdfwmwj" path="res://Assets/m3x6.ttf" id="8_rfle8"]
[ext_resource type="Texture2D" uid="uid://cxebwcryhvrgu" path="res://Assets/Walking anim5.png" id="8_xalf4"]
[ext_resource type="FontFile" uid="uid://brujrscme8bal" path="res://Assets/FutilePro.ttf" id="9_s8wrm"]
[ext_resource type="PackedScene" uid="uid://bpa8wjkfc4ydm" path="res://trivia.tscn" id="10_tpgum"]

[sub_resource type="CircleShape2D" id="CircleShape2D_af43y"]
radius = 20.025

[sub_resource type="AtlasTexture" id="AtlasTexture_iovdh"]
atlas = ExtResource("1_30ev0")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_37g21"]
atlas = ExtResource("1_30ev0")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejomo"]
atlas = ExtResource("1_30ev0")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vna1x"]
atlas = ExtResource("1_30ev0")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q486a"]
atlas = ExtResource("1_30ev0")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2t2dg"]
atlas = ExtResource("1_30ev0")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2s0l"]
atlas = ExtResource("1_30ev0")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3no5o"]
atlas = ExtResource("1_30ev0")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eec6j"]
atlas = ExtResource("1_30ev0")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsk6k"]
atlas = ExtResource("1_30ev0")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fqib"]
atlas = ExtResource("1_30ev0")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qf38"]
atlas = ExtResource("1_30ev0")
region = Rect2(144, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_einre"]
animations = [{
"frames": [],
"loop": true,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iovdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37g21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejomo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vna1x")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_7xrjg")
}, {
"duration": 1.0,
"texture": ExtResource("4_in08t")
}],
"loop": true,
"name": &"nushc-downwards",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_j6lri")
}, {
"duration": 1.0,
"texture": ExtResource("4_jcenl")
}],
"loop": true,
"name": &"nushc-sideways",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_xalf4")
}],
"loop": true,
"name": &"nushc-up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q486a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2t2dg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2s0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3no5o")
}],
"loop": true,
"name": &"sideways",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eec6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsk6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fqib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qf38")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_7scvo"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath("AnimatedSprite2D:frame")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath("AnimatedSprite2D:flip_h")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false
properties/3/path = NodePath("Box:visible")
properties/3/spawn = true
properties/3/sync = true
properties/3/watch = false
properties/4/path = NodePath("Box/Label:text")
properties/4/spawn = true
properties/4/sync = true
properties/4/watch = false
properties/5/path = NodePath("AnimatedSprite2D:animation")
properties/5/spawn = true
properties/5/sync = true
properties/5/watch = false
properties/6/path = NodePath("player_name:text")
properties/6/spawn = true
properties/6/sync = true
properties/6/watch = false
properties/7/path = NodePath("player_name:visible")
properties/7/spawn = true
properties/7/sync = true
properties/7/watch = false
properties/8/path = NodePath("ScoreLabel:text")
properties/8/spawn = true
properties/8/sync = true
properties/8/watch = false

[sub_resource type="LabelSettings" id="LabelSettings_23hrk"]
line_spacing = 0.0
font = ExtResource("8_rfle8")
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1e57h"]
font = ExtResource("9_s8wrm")
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_bdqpw"]
radius = 26.0192

[sub_resource type="LabelSettings" id="LabelSettings_1ngyn"]
font = ExtResource("9_s8wrm")
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="player" type="CharacterBody2D"]
z_index = 3
collision_layer = 2
script = ExtResource("1_gbfve")
trivia_scn = ExtResource("10_tpgum")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 30)
shape = SubResource("CircleShape2D_af43y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_einre")
animation = &"nushc-up"

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = -768
limit_top = -704
limit_right = 2176
limit_bottom = 1600

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 5.0

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_7scvo")

[node name="Box" type="Sprite2D" parent="."]
z_index = 3
texture_filter = 1
position = Vector2(38, -81.375)
scale = Vector2(3.21875, 2.30078)
texture = ExtResource("7_atc84")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Box"]
anchors_preset = -1
anchor_left = 0.561
anchor_top = 0.359
anchor_right = 0.561
anchor_bottom = 0.359
offset_left = -64.904
offset_top = -49.976
offset_right = -6.90401
offset_bottom = -11.976
label_settings = SubResource("LabelSettings_23hrk")
horizontal_alignment = 1
autowrap_mode = 3
max_lines_visible = 3

[node name="player_name" type="Label" parent="."]
z_index = 3
offset_left = -40.0
offset_top = 47.0
offset_right = 40.0
offset_bottom = 73.0
label_settings = SubResource("LabelSettings_1e57h")
horizontal_alignment = 1
text_overrun_behavior = 1

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 31)
shape = SubResource("CircleShape2D_bdqpw")

[node name="Namelabel" type="LineEdit" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -17.0
offset_right = 94.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Enter username"

[node name="ChatBox" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -16.0
offset_right = 25.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2

[node name="LineEdit" type="LineEdit" parent="ChatBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.5
offset_top = 143.5
offset_right = 177.5
offset_bottom = 174.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Type your message..."

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.0
offset_top = 62.0
offset_right = 22.0
offset_bottom = 88.0
grow_horizontal = 2
text = "Score:"
label_settings = SubResource("LabelSettings_1ngyn")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="text_submitted" from="Namelabel" to="." method="_on_namelabel_text_submitted"]
[connection signal="text_submitted" from="ChatBox/LineEdit" to="." method="_on_line_edit_text_submitted"]
